# wasm-percolator

./: .editorconfig  Cargo.toml  README.md  build.sh  build_.sh  index.html  index.js  style.css
.github/workflows/: build.sh  static.yml
pkg/: bare_metal_wasm.d.ts  bare_metal_wasm.js  bare_metal_wasm_bg.wasm  bare_metal_wasm_bg.wasm.d.ts  package.json  wasm_perocator.js  wasm_perocator_bg.wasm
pkg/snippets/bare-metal-wasm-1bdf68789436c48a/: inline0.js
src/: dfs_connected_components.rs  lib.rs
www/: index.html  index.js  wasm_perocator.wasm
