[package]
name = "bare-metal-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
disjoint-sets = "0.4.2"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.2"
